rust/template/ddlog_derive/tests/ui/fail/reject_unions.stderr
error: `Mutator` cannot be automatically implemented on unions
 --> $DIR/reject_unions.rs:6:1
  |
6 | union Foo {
  | ^^^^^

error: `IntoRecord` cannot be automatically implemented on unions
 --> $DIR/reject_unions.rs:6:1
  |
6 | union Foo {
  | ^^^^^

error: `FromRecord` cannot be automatically implemented on unions
 --> $DIR/reject_unions.rs:6:1
  |
6 | union Foo {
  | ^^^^^
